--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,61 @@
 * {
     box-sizing: border-box;
-    font-family: sans-serif;  /* Удаление засечек у букв */
+    font-family: sans-serif;
+    /* Удаление засечек у букв */
 }
 
-.container{
+.container {
     width: 1170px;
     margin: 0 auto;
 }
+
 .menu {
     /* border: 1px solid red; помогает увидеть границы меню при настройке */
 }
-.menu_inner{
 
-    margin: 25px 0;  /* отступ сверху 25, а побокам 0 */
-    display: flex;    /* выводим блоки в одну строку */
-    justify-content: space-between;     /* Раскидываем блоки по краям */
-    align-items: center;   /* Выравнивание по вертикали */
+.menu_inner {
+
+    margin: 25px 0;
+    /* отступ сверху 25, а побокам 0 */
+    display: flex;
+    /* выводим блоки в одну строку */
+    justify-content: space-between;
+    /* Раскидываем блоки по краям */
+    align-items: center;
+    /* Выравнивание по вертикали */
 }
 
 #img_logo {
-    width: 150px;
+    width: 200px;
     height: 100px;
 }
 
 .nav {
     display: flex;
-    list-style: none;  /* Убираем кругляжки у элементов списка */
+    list-style: none;
+    /* Убираем кругляжки у элементов списка */
     padding: 0;
     margin: 0;
-    
+
 
 }
 
 .nav li a {
-    text-transform: uppercase; /* Делаем все буквы заглавными */
-    color: #999;  /* Серый цвет текста */
-    text-decoration: none;  /* Убирает подчеркивание ссылки */
-    padding: 10px 15px;/* отступы сверху 10px, а по бокам 20 */
+    text-transform: uppercase;
+    /* Делаем все буквы заглавными */
+    color: #999;
+    /* Серый цвет текста */
+    text-decoration: none;
+    /* Убирает подчеркивание ссылки */
+    padding: 10px 15px;
+    /* отступы сверху 10px, а по бокам 20 */
 }
 
-.nav li a:hover {/* Задание эффекта при наведении на ссылку */
-background-color: #ffc744;
-color: white;
-border-radius: 5px;
+.nav li a:hover {
+    /* Задание эффекта при наведении на ссылку */
+    background-color: #ffc744;
+    color: white;
+    border-radius: 5px;
 
 }
 
